--- a/Readings/Supermultiplier.bib
+++ b/Readings/Supermultiplier.bib
@@ -1,5 +1,5 @@
 @article{fazzaridemandled2020,
-	title = {Demand\-led growth and accommodating supply},
+	title = {Demand-led growth and accommodating supply},
 	volume = {44},
 	issn = {0309-166X, 1464-3545},
 	url = {https://academic.oup.com/cje/article/44/3/583/5714155},
@@ -11,4 +11,13 @@
 	journal = {Cambridge Journal of Economics},
 	author = {Fazzari, Steven M and Ferri, Piero and Variato, Anna Maria},
 	year = {2020}
+}
+
+@article{dejuan_cum-finance_2018,
+	title = {The {Supermultiplier}-{Cum}-{Finance}. {Economic} {Limits} of a {Credit} {Driven} {System}},
+        year = {2018},
+	abstract = {Credit explosion, debt overhang and asset bubbles, of the size observed in the period 1995-2008, have been a recurrent problem of advanced capitalism. In this paper we analyse the causes and consequences of over-indebtedness from a supermultiplier model that takes into account the debt-service. We contend that the accelerator of investment is a stable and stabilizing mechanism when investment depends on the expected increases in “permanent” demand. The problems of instability are rooted in the consumptionmultiplier when it does not depend on fixed parameters (like the tax rate) but on coefficients that evolve endogenously; namely the debt-burden and the debt service. To control the financial sources of this instability, monetary authorities should prevent that credit rises systematically above the growth of nominal GDP.},
+	language = {en},
+	author = {Dejuán, Óscar and McCombie, John S L},
+	pages = {28}
 }
