--- a/Writings/QCA/Research_Paper.tex
+++ b/Writings/QCA/Research_Paper.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-09 qua 15:39
+% Created 2020-09-24 qui 17:09
 % Intended LaTeX compiler: pdflatex
 \documentclass{SelfArx}
   \usepackage[T1]{fontenc}
@@ -64,19 +64,20 @@ maxcitenames=3]{biblatex}
 \maketitle % Print the title and abstract box
 \thispagestyle{empty} % Removes page numbering from the first page
 
+\section*{Capítulo QCA}
+\label{sec:orgdb30c7d}
 
+\subsection*{Introduction}
+\label{sec:org1ebd637}
 
-\section*{Introduction}
-\label{sec:org032c2d9}
+\subsection*{Methods}
+\label{sec:org5f689f3}
 
-\section*{Methods}
-\label{sec:org28e8abf}
+\subsection*{Conclusion}
+\label{sec:org47ad705}
 
-\section*{Conclusion}
-\label{sec:org2e538f3}
-
-\section*{Acknowledgements}
-\label{sec:org36e678e}
+\subsection*{Acknowledgements}
+\label{sec:orgbdd9b33}
 
 Agradecimentos
 
