--- a/Writings/thesis.tex
+++ b/Writings/thesis.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-09 qua 20:55
+% Created 2020-09-24 qui 17:11
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt,openright,oneside,a4paper,english,sumario=tradicional]{gpsabntex}
   \usepackage{lipsum}             % Pacote que gera texto dummy
@@ -284,16 +284,23 @@ Conclui-se que a taxa própria de juros dos imóveis explica a taxa de crescimen
 \renewcommand{\thepage}{\arabic{page}}  % Setting the page output to arabic   -- not necessary, unless `book` class and `\frontmatter` is used.
 
 
+\thispagestyle{empty} % Removes page numbering from the first page
+
 \chapter{Capítulo QCA}
-\label{sec:org3d46169}
+\label{sec:orgc21e30e}
+
+\epigraph{The Fed, the European Central Bank and the Bank of Japan together set monetary policy for a zone that accounts for 80 per cent of the world’s
+industrialized economic activity ... Rarely, if ever, can so much power have been wielded by such a small number of institutions sitting outside the
+direct democratic process.}{Goldman Sachs, 2000}
+
 
 \section{Introduction}
-\label{sec:org40bf5e0}
+\label{sec:orgea8441a}
 
 \section{Methods}
-\label{sec:orgea61dd0}
+\label{sec:org4e67941}
 
 \section{Conclusion}
-\label{sec:org677543a}
+\label{sec:org20044f3}
 \appendix
 \end{document}
