--- a/Readings/Supermultiplier.org
+++ b/Readings/Supermultiplier.org
@@ -1,12 +1,76 @@
 #+PROPERTY: header-args :tangle "Supermultiplier.bib"
+#+OPTIONS: num:nil toc:2 tags:not-in-toc *:t                                
 #+TITLE: Sraffian Supermultiplier readings
 #+AUTHOR: Gabriel Petrini
 #+LATEX_HEADER: \bibliography{Supermultiplier.bib}
+#+TEXT: Some notes for Sraffian Supermultiplier growth theory
+#+LANG: en
+
+* Org related                                               :ignore:noexport:
+
+#+ARCHIVE: %s_read::
+#+STARTUP: align
+#+TODO: READ SKIM PARTIAL WAIT MAYBE | REF REPORT DONE ARCH
+#+PROPERTY: header-args:bibtex :tangle Supermultiplier.bib :exports none
+#+PROPERTY: COLUMNS %TYPE %PRIORITY %7TODO(Decision) %20ITEM(Title) %4YEAR %COUNTRY(ISO3) %8STATUS %4CITE
+#+PROPERTY: TYPE_ALL Theory Method Case Manual Other Thechnical Review Empirical
+#+PROPERTY: DECISION_ALL Read File Skip PartialRead
+#+PROPERTY: ZOTERO_ALL Yes No Partial Entry
+#+PROPERTY: STATUS_ALL Reading Searching Abandoned Finished Skimmed NotFound 404 Downloaded Filed
+#+PROPERTY: RELEVANCE_ALL High Regular Low None
+#+PROPERTY: IMPACT_ALL High Regular Low None
+#+PROPERTY: CITE_ALL Yes No Wait
+#+PROPERTY: YEAR
+#+PROPERTY: COUNTRY
 
 
-* Simulation                                                
-** cite:fazzaridemandled2020 -     citetitle*:fazzaridemandled2020              
+* HTML headers                                              :noexport:ignore:
 
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/htmlize.css"/>
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="http://www.pirilampo.org/styles/readtheorg/css/readtheorg.css"/>
+#+HTML_HEAD: <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+#+HTML_HEAD: <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/lib/js/jquery.stickytableheaders.min.js"></script>
+#+HTML_HEAD: <script type="text/javascript" src="http://www.pirilampo.org/styles/readtheorg/js/readtheorg.js"></script>
+#+HTML_HEAD: <style> #content{max-width:1800px;}</style>
+#+CSL_STYLE: associacao-brasileira-de-normas-tecnicas-ipea.csl
+
+
+* [#A] Survey
+  :PROPERTIES:
+  :UNNUMBERED: t
+  :END:
+  
+
+#+BEGIN: columnview :maxlevel 2 :id global
+| TYPE      | PRIORITY | Decision | Title                                                                                                     | YEAR | ISO3 | STATUS  | CITE |
+|-----------+----------+----------+-----------------------------------------------------------------------------------------------------------+------+------+---------+------|
+|           | B        |          | HTML headers                                                                                              |      |      |         |      |
+|           | A        |          | Survey                                                                                                    |      |      |         |      |
+|           | B        |          | Simulation                                                                                                |      |      |         |      |
+| Empirical | B        | READ     | cite:fazzaridemandled2020 -     citetitle*:fazzaridemandled2020                                           | 2020 |      | Reading | Yes  |
+| Empirical | B        | READ     | cite:dejuan_cum-finance_2018 - [[http://www.centrosraffa.org/public/0c0e869e-9063-41a0-a597-9ef0337ec1c8.pdf][The Supermultiplier-Cum-Finance. Economic Limits of a Credit Driven System]] | 2018 |      | Reading | Yes  |
+|           | B        |          | Theoretical                                                                                               |      |      |         |      |
+|           | B        |          | References                                                                                                |      |      |         |      |
+#+END
+
+
+
+* Simulation
+  :PROPERTIES:
+  :UNNUMBERED: t
+  :END:
+
+** READ cite:fazzaridemandled2020 -     citetitle*:fazzaridemandled2020
+   :PROPERTIES:
+   :YEAR:     2020
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Reading
+   :RELEVANCE: Regular
+   :IMPACT:   Regular
+   :CITE:     Yes
+   :END:    
 #+BEGIN_SRC bib :tangle yes  :exports none
 @article{fazzaridemandled2020,
 	title = {Demand-led growth and accommodating supply},
@@ -24,27 +88,179 @@
 }
 #+END_SRC
 
-#+ATTR_LATEX: :environment longtable :align l|p{.7\textwidth}
-|--------------------------------+------------------------------------------|
-|--------------------------------+------------------------------------------|
-| <30>                           | <40>                                     |
-| *Background*                   | Heterodox growth models usually does not pay attention to supply-demand interations |
-| *Supporting Ideas*             | Some usual simplifying hypothesis may not be reasonable in developed (mature) countries. Supply side factos should be included into the analysis |
-| *Contribution*                 | Links supply side factos (/i.e./ labour supply and productivity) to demand-led growth mode. |
-| *Relevance*                    | Calibrates data that can be used for other simulations (my own for instance). Presentes some really interesting figures to show model dynamics. |
-| *Methods*                      | Simulation calibrated by real US Data    |
-| *Results*                      | Demand leads supply even when growth is near of full capacity/employment. Autonomous expenditure generates different path along with supply converges. Supply only constrains growth, but not its trajectory. |
-| *Interesting Findings*         | Model is related to "Secular Stagnation" discussion. Points out that a shift in income distribution could generates higher growth rates if it is associated with changes in capitalists consumption. Demand-side austeriy programs would decrease supply growth rate, so "output gap" seems to desapear, but is a result of slower growth rate (and lower supply response). |
-| *Critics*                      | Authors coud discuss in more details the economic meaning of supply side equations (5, 6) |
-| *Uncategorized stuff*          | Differently from others SSM models, \textcite{fazzaridemandled2020} presents the model in terms of desired capital-output ratio.   |
-|--------------------------------+------------------------------------------|
-|--------------------------------+------------------------------------------|
+| <30>                   | <40>                                                                                                                                                                                                                                                                                                                                                                        |
+| *Background*           | Heterodox growth models usually does not pay attention to supply-demand interations                                                                                                                                                                                                                                                                                         |
+| *Supporting Ideas*     | Some usual simplifying hypothesis may not be reasonable in developed (mature) countries. Supply side factos should be included into the analysis                                                                                                                                                                                                                            |
+| *Contribution*         | Links supply side factos (/i.e./ labour supply and productivity) to demand-led growth mode.                                                                                                                                                                                                                                                                                 |
+| *Relevance*            | Calibrates data that can be used for other simulations (my own for instance). Presentes some really interesting figures to show model dynamics.                                                                                                                                                                                                                             |
+| *Methods*              | Simulation calibrated by real US Data                                                                                                                                                                                                                                                                                                                                       |
+| *Results*              | Demand leads supply even when growth is near of full capacity/employment. Autonomous expenditure generates different path along with supply converges. Supply only constrains growth, but not its trajectory.                                                                                                                                                               |
+| *Interesting Findings* | Model is related to "Secular Stagnation" discussion. Points out that a shift in income distribution could generates higher growth rates if it is associated with changes in capitalists consumption. Demand-side austeriy programs would decrease supply growth rate, so "output gap" seems to desapear, but is a result of slower growth rate (and lower supply response). |
+| *Critics*              | Authors coud discuss in more details the economic meaning of supply side equations (5, 6)                                                                                                                                                                                                                                                                                   |
+| *Uncategorized stuff*  | Differently from others SSM models, \textcite{fazzaridemandled2020} presents the model in terms of desired capital-output ratio.                                                                                                                                                                                                                                            |
+
+
+** READ [[http://www.centrosraffa.org/public/0c0e869e-9063-41a0-a597-9ef0337ec1c8.pdf][The Supermultiplier-Cum-Finance. Economic Limits of a Credit Driven System]] -  cite:dejuan_cum-finance_2018
+   :PROPERTIES:
+   :YEAR:     2018
+   :ZOTERO:   Yes
+   :TYPE:     Empirical
+   :STATUS:   Reading
+   :RELEVANCE: High
+   :IMPACT:   Low
+   :CITE:     Yes
+   :END:    
+#+BEGIN_SRC bibtex
+@article{dejuan_cum-finance_2018,
+	title = {The {Supermultiplier}-{Cum}-{Finance}. {Economic} {Limits} of a {Credit} {Driven} {System}},
+        year = {2018},
+	abstract = {Credit explosion, debt overhang and asset bubbles, of the size observed in the period 1995-2008, have been a recurrent problem of advanced capitalism. In this paper we analyse the causes and consequences of over-indebtedness from a supermultiplier model that takes into account the debt-service. We contend that the accelerator of investment is a stable and stabilizing mechanism when investment depends on the expected increases in “permanent” demand. The problems of instability are rooted in the consumptionmultiplier when it does not depend on fixed parameters (like the tax rate) but on coefficients that evolve endogenously; namely the debt-burden and the debt service. To control the financial sources of this instability, monetary authorities should prevent that credit rises systematically above the growth of nominal GDP.},
+	language = {en},
+	author = {Dejuán, Óscar and McCombie, John S L},
+	pages = {28}
+}
+#+END_SRC
+
+
+
+
+| <50>                                          | <40>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| *Background*                                  | Construction/Debt-led growth after 1995. Low interest rates and Debt increase (with decrease of wage-share)                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| *Supporting Ideas*                            | Capacity creating expenditure follows the sraffian supermultiplier. Houses valued is defined by the value added by the banking sector. There may be a macroeconomic limit for credit expansion.                                                                                                                                                                                                                                                                                                                                       |
+| *Purpose*                                     | Propose a model in which demarcates the macroeconomic limits of credit expansion.                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+| *Originality/value (Contribution)*            | Describe a credit-led $\Rightarrow$ Debt burden dynamic chain as a result of *endogenous* and *cumulative* process of *over-indebtedness*                                                                                                                                                                                                                                                                                                                                                                                             |
+| *Relevance*                                   | Include residential investment and also present some limits for credit-led growth based on wage and credit growth rates. Furthermore, this paper rationale could be applied in a ABM model in which each agent has a unique compulsory transfer parameter                                                                                                                                                                                                                                                                             |
+| *Design/methodology/approach*                 | Theoretical model simulated with some calibrated parameters                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| *Results*                                     | The authors present some macroeconomic stability conditions based on both wages and credit growth rates as well as the *compulsory rate of transfers*. Only a minimum and a maximum propensity to consume impose a limit for the downwards and upwards spiral in income                                                                                                                                                                                                                                                               |
+| *(Interesting) Findings*                      | Compulsory transfer mechanism imposed to workers establishes both a celling and a floor to the credit expansion. Besides that, this parameter generates an extra profit for the banks.                                                                                                                                                                                                                                                                                                                                                |
+| *Research limitations/implications (Critics)* | Since there are autonomous expenditures growing at different rates, the model would have an asymptotic path in which one of those autonomous expenditure share would decrease forever. Other (possible) critic is that *Worker Households* (and not capitalists) invest in Dwellings. This hypothesis is contrasted by the New narrative. The authors also argue that an increase of credit-led consumption would trigger an asset inflation mechanism but there is no further discussion about this.                                 |
+| *Uncategorized stuff*                         | The authors also include an *inventories* mechanisms along with the supermultiplier. This model also allows to Banks accelerate the overall growth rate by *lowering the creditworthness requirements* (relevant for the Dissertation ABM proposal). The authors explicit demand leaks as a result of credit-financed consumption. Furthermore, they include extra profits of the banking (sub-)sector. Related to this, they include an equation for the *actual value* of new houses based on *valued added* by the banking sector. |
+| *5SS*                                         | The authors explicit the macroeconomic limits of a credit-led consumption followed by a debt-burden regime based both on autonomous expenditure growth rates (residential investment and credit) and on some parameters related to compulsory transfers from workers to the banking sub(sector).                                                                                                                                                                                                                                      |
+
+
+
+*** Specific comments
+
+The effective propensity to consume ($c'$) is defined by the propensity to consume minus the *compulsory transfer* from borrowes to lender ($\tau$). They also proposes a maximum ($\hat \tau$) and a minimum rate ($\underline{\tau}$) related respectively to subsistence consumption ($\underline{c}$) and to subsistence dwellings services ($\underline{z}$). Macroeconomic equilibrium requires:
+
+$$
+h = 1 - c' - z
+$$
+while the maximum growth rate ($\gamma^\star$) is:
+
+$$
+\gamma^\star = 1 - \underline{c} - \underline{z}
+$$
+in which $h$ is the marginal propensity to invest and $z$ is the share of autonomous expenditure.
+
+Since workers households have access to credit, the multiplier ($\mu$) must include a demand leak according to the transfer parameter (forced saving) as follows
+
+$$
+\mu = \frac{1}{1-c(1-\tau)}
+$$
+in this model, however, the debt-service ratio ($f$)  is not constant. This is the proposed cummulative effect in which decreases the multiplier value:
+
+$$
+f = (a + i)\cdot \beta = (a + i)\cdot \frac{DB}{W}
+$$
+in which $a$ is the amortization rate, $i$ is the interest rate and $\beta$ is the debt-burden ratio defined as the share in wages of debt stock[fn::In this paper, stock variables are presented in square brackets]. 
+
+Thus, the income is defined by
+
+$$
+Y = R + W_d + TF
+$$
+where $R$ is the profits, $W_d$ is the disposable wages and $TF$ is the debt-service define by
+
+$$
+TF = \tau\cdot W
+$$ 
+
+Next, the authors present the *actual value* of new homes ($Z$) as the *value added* by the banking subsystem ($F$):
+
+$$
+Z = Z' + F
+$$
+
+which is defined as the interest payments that are split into the wages and profits paid to the factors directly or in-
+directly employed[fn::$Z'$ is not specified.]
+
+$$
+F = INT = W_b + R_b
+$$
+
+Since capacity creating investment moves along with demand expectation, banks have more chances to expand the supply of loans to speculators and to households willing to buy a dwelling. This implies that the rate of growth of credit ($\phi$) may surpass the rate of growth of nominal GDP ($\gamma$).
+
+Next, the authors present three scenarios
+
+1. *Stationary Economy:* $\gamma = \phi = 0$
+2. *Balanced Expansion:* $\gamma = \phi$
+3. *Assymetric Expansion:* $\\phi > \gamma$
+
+On the last scenario, the debt stock grows faster than income so there is an "the extraction of an additional part of wages bringing about extra profits in the banking sector ($R_{bx}$)". In this case, the debt-service will be
+
+$$
+TF = W_b + R_b + R_{bx}
+$$
+Furthermore, they argue that acceleration of credit may cause asset inflation $(\Delta P_x)$ and over but there is no further discussion about this topic and refer to Werner (2014)
+
+#+BEGIN_QUOTE
+ Since the supply of non-produced assets is fixed or moves slowly, an acceleration of credit is bound to pump their prices, generating bubbles in the residential and the stock exchange markets
+#+END_QUOTE
+
+and then present the following equation
+
+$$
+P_x = P_{x_{-1}}(1+\epsilon(\phi-\gamma))
+$$
+in this case, $\epsilon$ is a positive parameter. The previous equation could be rearranged to express asset inflation growth rate ($g_{P_{x}}$)
+
+$$
+g_{P_{x}} = \epsilon (\phi-\gamma)
+$$
+
+Furthermore, the authors do not evaluate the case of *asset deflation*. It would be interesting to express it. Next, they argue that if output inflation grows above asset inflation, indebtedness ratio would increase while the debt-burden ration evolve as follows
+
+$$
+\beta = \beta_{-1}\left(1+\frac{\phi - \gamma}{CR}\right) \Leftrightarrow g_\beta = \frac{\phi-\gamma}{CR}
+$$
+As a consequence, $f$ rises with $\beta$ increase and its implies a decrease of effective propensity to consume which implies a reduction in (super)multiplier and the level of aggregate demand *cumulatively* (for a given level of $Z$). Also, they define an over-indebted economy when the debt-burden ration increases endogenously:
+
+$$
+g_\beta > 0
+$$
+
+#+BEGIN_SRC dot :file esquema.png
+digraph D {
+    label = "ϕ>γ";
+
+
+  "Δ β" -> "Δ f";
+  "Δ f" -> "∇ c'";
+  "∇ c'" -> "∇ μ";
+  "∇ μ" -> "∇ Y";
+  "∇ Y" -> "Δ β";
+
+  }
+#+END_SRC
+
+#+RESULTS:
+[[file:esquema.png]]
+
+
+**** Requirement for macro-financial sustainability
+
+1. The rate of growth of credit should be lower than or equal to the rate of growth of nominal GDP ($\phi \leq \gamma$)
+2. The compulsory rate of transfers from wages to banks should be lower than or equal to the maximum transfer rate that workers can afford ($f\leq \hat \tau$)
+   - As the legal debt service ($f=(i+a)\beta$) approaches ($\hat \tau$), the most fragile portion of debtors will default
+3.  The income generated in the process of production should be fully spent ($TF \approx CR$)
 
 * Theoretical                                                   :Theoretical:
-* References
   :PROPERTIES:
   :UNNUMBERED: t
   :END:
-  #+LaTeX: \printbibliography[heading=none]
 
+* References                                                         :ignore:
+
+bibliography:Supermultiplier.bib
   
